// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoItem Snapshots should match the large snapshot 1`] = `
<div
  className=""
>
  <div
    className="text-black font-bold text-xl"
  >
    I am a headline
  </div>
  <div
    className="text-grey-darker text-base"
  >
    I am a tagline
  </div>
</div>
`;

exports[`InfoItem Snapshots should match the regular snapshot 1`] = `
<div
  className=""
>
  <div
    className="text-black font-bold text-base"
  >
    I am a headline
  </div>
  <div
    className="text-grey-darker text-sm"
  >
    I am a tagline
  </div>
</div>
`;
